# Q-Fin-Portfolio

./: .gitignore  README.md  requirements-benchmarks.txt  requirements.txt
01_Portfolio_Optimization/: README.md  portfolio_optimizer_app.py
01_Stochastic_Models/: README.md  portfolio_optimizer_app.py
02_Options_Pricing/: Hybrid_pricing_engine.py  README.md
02_Pricing_Engines/: Hybrid_pricing_engine.py  README.md  report_formatter.py
03_FX_And_Market_Risk/: README.md  config.example.py  fx_data_loader.py
03_Risk_Management/: README.md  fx_data_loader.py  var_calculator.py
04_Macro_Yield_Curve/: README.md  yield_curve_inversion.py
04_Quantitative_Analysis/: README.md  yield_curve_inversion.py
05_Derivatives_Dashboard/: README.md
05_Derivatives_Dashboard/Derivatives_Pricing_App/: README.md  app.py  utils.py
05_Interactive_Dashboards/: README.md
05_Interactive_Dashboards/Derivatives_Pricing_App/: README.md  app.py  utils.py
06_Algorithmic_Trading/: README.md  app.py
06_Algorithmic_Trading/src/: data_loader.py  engine.py  indicators.py
06_Strategy_Backtest/: README.md  app.py
06_Strategy_Backtest/src/: data_loader.py  engine.py  (+1 more)
07_Credit_Risk/: README.md
07_Credit_Risk_Modeling/: README.md  app.py
08_CPP_Pricing_Core/: README.md
08_Numerical_Kernels/: README.md
08_Numerical_Kernels/cpp/: CMakeLists.txt
08_Numerical_Kernels/cpp/src/: black_scholes.cpp
08_Numerical_Kernels/cpp/tools/: bs_demo.cpp
08_Numerical_Kernels/qfin_cpp_ext/: README.md  bindings.cpp  pyproject.toml  setup.py
benchmarks/: README.md  bs_mc_benchmark.py
(+8 files in other folders)
